feat: mixed jobs experiment with different scheduling algorithms

--- a/experimentation/requests.ipynb
+++ b/experimentation/requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_random_jobs(id, required_gpus):\n",
+    "#   jobs = [\n",
+    "#     {\n",
+    "#       'name': 'PyTorch',\n",
+    "#       'type': 'PyTorch',\n",
+    "#       'container_image': 'nathansetyawan96/horovod',\n",
+    "#       'command': 'python pytorch/pytorch_mnist.py',\n",
+    "#       'required_gpus': int(required_gpus)\n",
+    "#     },\n",
+    "#     {\n",
+    "#       'name': 'TensorFlow',\n",
+    "#       'type': 'TensorFlow',\n",
+    "#       'container_image': 'nathansetyawan96/horovod',\n",
+    "#       'command': 'python tensorflow2/tensorflow2_mnist.py',\n",
+    "#       'required_gpus': int(required_gpus)\n",
+    "#     }\n",
+    "#   ]\n",
+    "#   return jobs[id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +50,14 @@
     "      'name': 'PyTorch',\n",
     "      'type': 'PyTorch',\n",
     "      'container_image': 'nathansetyawan96/horovod',\n",
-    "      'command': 'python pytorch/pytorch_mnist.py',\n",
+    "      'command': 'python pytorch/pytorch_imagenet_resnet50.py',\n",
     "      'required_gpus': int(required_gpus)\n",
     "    },\n",
     "    {\n",
     "      'name': 'TensorFlow',\n",
     "      'type': 'TensorFlow',\n",
     "      'container_image': 'nathansetyawan96/horovod',\n",
-    "      'command': 'python tensorflow2/tensorflow2_mnist.py',\n",
+    "      'command': 'python tensorflow2/pytorch_imagenet_resnet50.py',\n",
     "      'required_gpus': int(required_gpus)\n",
     "    }\n",
     "  ]\n",
@@ -40,43 +66,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'message': 'Job with 2 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
-      "{'message': 'Job with 4 GPUs created successfully'}\n",
-      "{'message': 'Job with 2 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
-      "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 2 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
+      "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 2 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 3 GPUs created successfully'}\n",
+      "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 4 GPUs created successfully'}\n",
+      "{'message': 'Job with 2 GPUs created successfully'}\n",
+      "{'message': 'Job with 1 GPUs created successfully'}\n",
+      "{'message': 'Job with 2 GPUs created successfully'}\n",
       "{'message': 'Job with 3 GPUs created successfully'}\n",
       "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 2 GPUs created successfully'}\n",
+      "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 1 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
+      "{'message': 'Job with 4 GPUs created successfully'}\n",
+      "{'message': 'Job with 1 GPUs created successfully'}\n",
+      "{'message': 'Job with 4 GPUs created successfully'}\n",
       "{'message': 'Job with 2 GPUs created successfully'}\n",
       "{'message': 'Job with 3 GPUs created successfully'}\n",
-      "{'message': 'Job with 1 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
-      "{'message': 'Job with 1 GPUs created successfully'}\n",
       "{'message': 'Job with 2 GPUs created successfully'}\n",
-      "{'message': 'Job with 3 GPUs created successfully'}\n",
-      "{'message': 'Job with 2 GPUs created successfully'}\n"
+      "{'message': 'Job with 4 GPUs created successfully'}\n",
+      "{'message': 'Job with 4 GPUs created successfully'}\n"
      ]
     }
    ],
@@ -95,6 +121,13 @@
     "  # random sleep time from 1 to 30 seconds\n",
     "  time.sleep(random.randint(1, 30))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
